--- a/School Portal/academics.html
+++ b/School Portal/academics.html
@@ -803,7 +803,7 @@
                             <span>ISSTSD Inc.</span>
                         </a>
                     </div>
-                    <p>Empowering students to achieve excellence through innovation and dedication since 1985.</p>
+                    <p>Empowering students to achieve excellence through innovation and dedication since 2010</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
